<resources>
    <string name="app_name">Expense Finance</string>
    <string name="money_manager">Money Manager</string>
    <string name="choose_a_name_and_country_currency">Choose a name and country currency</string>
    <string name="add_account">Add Transaction</string>
    <string name="name">Your name</string>
    <string name="select_currency">Select country currency</string>
    <string name="next">NEXT</string>
    <string name="select_your_country_currency">Select your country currency</string>
    <string name="search_currency_name">Search currency name…</string>
    <string name="hereName">Here Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="select_date">Select date</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="account">Account</string>
    <string name="_0_0">0.0</string>
    <string name="_12_may_2023">12 May, 2023</string>
    <string name="textview">TextView</string>
    <string name="daily">Daily</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="all_data">All Data</string>
    <string name="monthly">Monthly</string>
    <string name="transaction">Transaction</string>

    <!-- %s use for convert any symbol to string -->
    <string name="amount_text">-%s</string>
    <string name="currency_with_symbol">(%s)</string>
    <string name="D">(%s)</string>
    <string name="all_transaction">All Transaction</string>
    <string name="project_name">Transaction</string>
    <string name="floatingButton">FloatingButton</string>
    <string name="accountA">Account</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="noteA">Note</string>
    <string name="textviewA">TextView</string>
    <string name="amountM">Amount</string>
    <string name="categoryM">Category</string>
    <string name="record">Record</string>
    <string name="i_apologize">I apologize for any misunderstanding</string>
    <string name="delete">delete</string>
    <string name="edite">edite</string>
    <string name="transportation">Transportation</string>
    <string name="imageback">Image Bac</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="structure">Structure</string>
    <string name="calendar">Calendar</string>
    <string name="add">Add</string>
    <string name="search">search....</string>


    <!-- for setting page-->
    <string name="a">Back main</string>
    <string name="b">Privacy Policy</string>
    <string name="c">Share your experience</string>
    <string name="d">Share this app</string>
    <string name="e">More apps</string>
    <string name="f">Sound effects</string>
    <string name="g">Clear all data</string>
    <string name="about">About</string>

    <string name="total">Total</string>
    <string name="no_data_available">No data available</string>
    <string name="trans">Trans..</string>
    <string name="stats">Stats</string>
    <string name="more">More</string>

    <string name="category_home">Home</string>
    <string name="category_business">Business</string>
    <string name="category_loan">Loan</string>
    <string name="category_investment">Investment</string>
    <string name="category_planning">Planning</string>
    <string name="category_rent">Rent</string>
    <string name="category_other">Other</string>

    <string name="aboutLong">Expense Finance: Money Manager is an easy-to-use app that helps you take charge of your money.</string>
    <string name="aboutLong1">Expense Finance: Money Manager is a comprehensive financial management app designed to empower individuals to take control of their finances with ease and efficiency. This user-friendly app offers a wide range of features to help users manage their money effectively. From tracking daily expenses and creating personalized budgets to setting financial goals and monitoring investments, Expense Finance provides a holistic view of one\'s financial life.</string>
    <string name="aboutLong2">With its intuitive interface and robust tools, users can gain insights into their spending habits, avoid overspending, and work towards achieving their financial aspirations. Whether it\'s keeping up with bill payments, analyzing income trends, or optimizing investments, this app serves as a valuable companion on the journey to financial success</string>
    <string name="aboutLong3"> Expense Finance is dedicated to ensuring the security of users\' financial data, making it a trustworthy partner in their financial management journey.</string>
</resources>