<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myModel"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/six"
        tools:context=".activity.SignupActivity">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/number_four"
            android:text="@string/choose_a_name_and_country_currency"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatEditText"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.35000002" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/appCompatEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_for_editext"
            android:fontFamily="@font/number_four"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.13" />

        <RelativeLayout
            android:id="@+id/spinnerFb"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_for_editext"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearlayout"
            app:layout_constraintEnd_toEndOf="@+id/appCompatEditText"
            app:layout_constraintStart_toStartOf="@+id/appCompatEditText"
            app:layout_constraintTop_toBottomOf="@+id/appCompatEditText"
            app:layout_constraintVertical_bias="0.39">


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/text1"
                android:singleLine="true"
                android:text="@string/select_your_country_currency"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/steText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/buttomFell"
                android:layout_toEndOf="@+id/text2"
                android:singleLine="true"
                android:text=""
                android:textSize="16sp" />


            <ImageButton
                android:id="@+id/buttomFell"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/income"
                android:src="@drawable/baseline_arrow_drop_down"
                app:tint="@color/black" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_for_signin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/appCompatEditText"
            app:layout_constraintStart_toStartOf="@+id/appCompatEditText"
            app:layout_constraintTop_toBottomOf="@+id/appCompatEditText"
            app:layout_constraintVertical_bias="0.26999998">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
