<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.About_my_app">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imageback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_back"
            app:tint="@color/black" />


        <TextView

            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="About"
            android:textColor="@color/black"
            android:textSize="23sp" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSelect">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:background="@drawable/degine_for_icone"
                android:padding="3dp"
                app:srcCompat="@drawable/iconea" />

            <TextView
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:text="Version:  4.4.0"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/provacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_medium"
                android:text="Declaration Privacy Policy"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_medium"
                android:text="About This App :" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/aboutLong" />

            <TextView
                android:fontFamily="@font/roboto"
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/aboutLong1" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:fontFamily="@font/roboto"
                android:paddingBottom="5dp"
                android:text="@string/aboutLong2" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingStart="5dp"
                android:text="@string/aboutLong3" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>