<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_for_bottomsheet"
    tools:context=".bottomFragment.BottomSheetFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/incomeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/diffult_value"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/income"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/expensivBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/diffult_value"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/expense"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    tools:layout_editor_absoluteX="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/select_date"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/symble4"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/datee"
                    android:textSize="18sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:fontFamily="@font/roboto"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/symble"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:text="$"
                    android:gravity="center"
                    android:layout_marginEnd="20dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/category"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/symble1"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/categories"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="8dp">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/account"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/symble2"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/user"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="top"
                        android:hint="@string/note"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@color/red"
                android:backgroundTint="@color/six"
                android:text="@string/save_transaction" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>